Migrating test assertions to AssertJ